Tạo database, hiện thị hoá đơn

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">My_cay_Uname</string>
+    <string name="app_name">Mỳ Cay</string>
     <string name="title_activity_menu">Menu</string>
     <!-- Strings used for fragments for navigation -->
     <string name="first_fragment_label">First Fragment</string>
