--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,4 +44,5 @@
         vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
     </string>
     <string name="title_activity_loai_mon_an">Loai_MonAn</string>
+    <string name="title_activity_trang_chu">TrangChu</string>
 </resources>
