Hoàn thiện chức năng của nhân viên và bàn

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,7 +44,7 @@
         vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
     </string>
     <string name="title_activity_loai_mon_an">Loai_MonAn</string>
-    <string name="title_activity_trang_chu">TrangChu</string>
+    <string name="title_activity_trang_chu">Mỳ cay</string>
     //
     <string name="nav_nhanvien">Nhân Viên</string>
     <string name="nav_monan">Món ăn</string>
